# personal_web

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  nginx.conf  pyproject.toml  requirements.in  requirements.txt  rxconfig.py
.github/workflows/: docker-build-and-deploy.yml
assets/css/: loop.css
assets/data/: certifications.json  courses.json  education.json  projects.json  technologies.json  work_experience.json
assets/data/en/: certifications.json  courses.json  education.json  projects.json  work_experience.json
assets/data/sp/: courses.json  projects.json  work_experience.json
personal_web/: constants.py  personal_web.py  state.py  utils.py
personal_web/components/: bento_card.py  buttons.py  certification.py  course.py  education.py  footer.py  language_switch.py  link_icon.py  main_pic.py  menu.py  navbar.py  project.py  techstack.py  texts.py  type_animation.py  work_experience.py  working_at.py
personal_web/data/: certification.py  courses.py  education.py  job.py  personal_info.py  project.py  technologies.py
personal_web/pages/: __init__.py  index.py
personal_web/styles/: colors.py  fonts.py  styles.py
personal_web/views/: __init__.py  about_me.py  certifications.py  courses.py  education.py  experience.py  presentation.py  projects.py  recommendations.py  technologies.py
